/**
 * Copyright (C) 2011 Adriano Monteiro Marques
 *
 * Author:  Zubair Nabi <zn.zubairnabi@gmail.com>
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
 * USA
 */

package org.umit.icm.mobile.proto.generated;
option java_outer_classname = "MessageProtos";

message WebsiteReportNormal{
		required int32 testID = 1;
		required int64 timeUTC = 2;
		required int32 statusCode = 3;
		required string responseContent = 4;
		required bool matchPattern = 5;
		optional double bandwidth = 6;
}

message WebsiteReportError{
		required int32 testID = 1;
		required int64 timeUTC = 2;
		required int32 statusCode = 3;
		required string redirectLink = 4;
		required string listNodes = 5;
}

message ServiceReportAllowed{
		required int32 testID = 1;
		required int64 timeUTC = 2;
		required bool statusCode = 3;
		optional double bandwidth = 4;
}

message ServiceReportDenied{
		required int32 testID = 1;
		required int64 timeUTC = 2;
		required string listNodes = 3;
}